--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=forum.hub
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/forum_hub
+spring.datasource.username=root
+spring.datasource.password=root
+
+# JPA Configurações
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+# Flyway Configurações
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
